--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+body {
+    position: relative;
+    display: flex;
+    gap: 5px;
+    flex-direction: column;
+    align-items: center;
+   
+    
+    
+}
