--- a/frontend/src/components/navbar/navbar.css
+++ b/frontend/src/components/navbar/navbar.css
@@ -2,20 +2,24 @@
 @tailwind components;
 @tailwind utilities;
 
-
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 .navbar-position{
     position: absolute;
-    right: 0;
+    width: 30%;
+    right: 0 ;
     text-align: center;
-    width: 20%;
+    justify-content: center;
+
 }
 
 .flex-option{
     display: flex;
-    gap: 0.5rem;
     align-items: center;
-    justify-content: center;
-
+    gap : 1rem;
 }
 
 @layer components {
