--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -9,7 +9,7 @@ body {
     gap: 5px;
     flex-direction: column;
     align-items: center;
-   
-    
-    
+    height: 50rem;
+    width: 100%;
+    box-sizing: border-box;      
 }
