--- a/frontend/src/components/togglable/togglable.css
+++ b/frontend/src/components/togglable/togglable.css
@@ -2,6 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
+*{
+    box-sizing: border-box;
+}
 
 
 
@@ -10,13 +13,18 @@
         @apply flex flex-col items-center justify-center
         w-full h-full
         bg-white
-        rounded-lg
-        shadow-md
-        border-2 border-solid border-slate-200
         text-slate-500
         cursor-pointer
         hover:border-slate-300
         p-2
         gap-2 ;
+    }
+    
+    #drag-and-drop-container{
+        @apply flex  flex-col items-center 
+        w-full h-full
+        gap-2
+        
+
     }
 }
