--- a/frontend/src/components/imageUploader/imageUploader.css
+++ b/frontend/src/components/imageUploader/imageUploader.css
@@ -20,6 +20,10 @@
     }
     .drop-area{
         @apply 
+        flex 
+        flex-col
+        justify-center
+        items-center
         bg-white
         text-slate-500
         w-full
@@ -30,6 +34,9 @@
         rounded
         p-2
         gap-2 ;
+    }
+    .label-input{
+        @apply relative cursor-pointer rounded-md bg-white font-semibold text-indigo-600 focus-within:outline-none focus-within:ring-2 focus-within:ring-indigo-600 focus-within:ring-offset-2 hover:text-indigo-500
     }
 
 
