--- a/frontend/src/components/imageUploader/imageUploader.css
+++ b/frontend/src/components/imageUploader/imageUploader.css
@@ -36,9 +36,17 @@
         gap-2 ;
     }
     .label-input{
-        @apply relative cursor-pointer rounded-md bg-white font-semibold text-indigo-600 focus-within:outline-none focus-within:ring-2 focus-within:ring-indigo-600 focus-within:ring-offset-2 hover:text-indigo-500
+        @apply relative 
+        cursor-pointer rounded-md bg-white font-semibold
+        text-indigo-600 focus-within:outline-none 
+         focus-within:ring-2 focus-within:ring-indigo-600 focus-within:ring-offset-2
+        hover:text-indigo-500
     }
 
-
-  
+    #load-button{
+        @apply 
+        rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold 
+        text-white shadow-sm hover:bg-indigo-500 focus-visible:outline 
+        focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600
+    }
 }
