--- a/frontend/src/components/login/login.css
+++ b/frontend/src/components/login/login.css
@@ -14,7 +14,7 @@
     w-3/4;
     }
     #login-form{
-    @apply flex flex-col gap-4 w-1/2 h-5/6;
+    @apply flex flex-col gap-4 w-1/3 h-5/6;
     }
     #username-input, #password-input{
     @apply border-2 border-[#a8dadc] p-2  shadow-sm rounded-md w-full h-9  focus:bg-[#b1b9e0]
@@ -23,6 +23,10 @@
     #submit-button{
     @apply rounded-md bg-[#5e548e] text-[#f1faee] font-bold mt-5 h-10 w-full
      hover:bg-[#7f74b3] ;
+    }
+
+    #forget-pass-p, #create-user-p{
+    @apply text-[#5e548e] font-bold  hover:text-[#7f74b3] hover:cursor-pointer;
     }
 
     #input-container{
